Fixed problem with formatting Fixed problem with types not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,96 +1,20 @@
-:root {
-    --first-background-color: #000;
-    --second-background-color: rgb(63, 19, 59);
-    --heading-text-color: rgb(199, 0, 0);
-    --body-text-color: #6ba9ff;
-    --button-background: #1d778d;
-    --button-text: white;
-    --button-border-color: #6ed3f0;
-    --nav-text-unvisited: #6ba9ff;
-    --nav-text-visited: #6ba9ff;
-    --nav-text-hover: rgb(192, 2, 192);
-    --nav-text-active: rgb(192, 2, 192);
-    --animation-color-one: red;
-    --animation-color-two: orange;
-    --animation-color-three: yellow;
-    --animation-color-four: green;
-    --animation-color-five: blue;
-    --animation-color-six: purple;
-    --font-size-very-large: 72px;
-    --font-size-large: 50px;
-    --font-size-medium: 40px;
-    --font-size-small: 15px;
-    --font-weight-bold: 700;
-    --font-weight-normal: 200;
-    --modal-container-bkgd-color: rgba(93, 37, 37, 0.5);
-    --modal-bkgd-color: rgba(250, 230, 230, 0.9);
-    --modal-close-button-color: #232222;
-}
 
 .pokemon-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
+    padding-top: 100px;  /* avoid navbar covering content */
+} 
+
+
+.navbar {
+    background-color: #015a23;
+    
 }
 
 .button {
-    margin: 10px;
-    /* Add some margin for spacing between buttons */
+    margin: 20px 0px;   /* Add some margin for spacing between buttons */
+    background-color: rgb(9, 55, 116);
 }
+
 html,
 body {
-    background-color: var(--second-background-color);
+    background-color: rgb(63, 19, 59);
 }
-
-.pokemon-list {
-    list-style: none;
-    justify-content: flex-start;
-    padding-top: 100px;  /* navbar buffer, adjust if needed */
-}
-
-  /* h1 {
-    font-size: var(--font-size-very-large);
-    font-weight: var(--font-weight-bold);
-    color: var(--heading-text-color);
-    text-align: center;
-  }
-  
-  h2 {
-    font-size: var(--font-size-large);
-    font-weight: var(--font-weight-normal);
-    color: var(--heading-text-color);
-  }
-  
-  h3 {
-    font-size: var(--font-size-large);
-    font-weight: var(--font-weight-normal);
-    color: var(--body-text-color);
-  }
-  
-
-  
-  p {
-    font-size: var(--font-size-medium);
-    font-weight: var(--font-weight-normal);
-  }
-  
-  li {
-    margin: 20px;
-  }
-  
-  a {
-    color: var(--body-text-color);
-  } */
-    
-  /* button {
-    display: flex;
-    height: 100px;
-    font-size: 1.0em;
-    font-weight: bold;
-    text: center;
-} */
-
